--- a/pom.xml
+++ b/pom.xml
@@ -56,18 +56,25 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.13.2.2</version>
+</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
 	<build>
 	<plugins>
-	 <plugin>
+            <plugin>
                 <groupId>org.jsonschema2pojo</groupId>
                 <artifactId>jsonschema2pojo-maven-plugin</artifactId>
                 <version>1.0.2</version>
                 <configuration>
                     <sourceDirectory>${basedir}/src/main/resources/schema</sourceDirectory>
-                    <targetPackage>com.example.types</targetPackage>
+                    <targetPackage>com.example.springevents</targetPackage>
                 </configuration>
                 <executions>
                     <execution>
@@ -77,7 +84,6 @@
                     </execution>
                 </executions>
             </plugin>
-		
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
